--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                 <a href=""><button class="content-btn">Learn More</button></a>
                 </div>
                 <div class="web-development-reason-1-part-image">
-                    <img src="/assets/Layer_1.png" alt="">
+                    <img src="assets/Layer_1.png" alt="">
                   </div>
             </div>
             <!-- part-2 -->
             <div class="web-development-reason-1-part">
                 <div class="web-development-reason-1-part-image">
-                    <img src="/assets/Group 3.png" alt="">
+                    <img src="assets/Group 3.png" alt="">
                  </div>
                  <div class="web-development-reason-1-part-content">
                     <h1 class="content-title">I will help People by creating Modern Web System </h1>
@@ -62,7 +62,7 @@
                     <a href=""><button class="content-btn">Learn More</button></a>
                 </div>
                 <div class="web-development-reason-1-part-image">
-                    <img src="/assets/Group 4.png" alt="">
+                    <img src="assets/Group 4.png" alt="">
                 </div>
             </div>
         </section>
@@ -85,19 +85,19 @@
             </div>
             <div class="target-container">
             <div class="html-content">
-                <img class="html-img" src="/assets/html.png" alt="">
+                <img class="html-img" src="assets/html.png" alt="">
                 <h1 class="title-styles">HTML</h1>
                 <p class="section-descript section-description">HTML skills are foundational for building robust and accessible websites.</p>
                 <a  class="target-container-link" href="">Learn more</a>
             </div>
             <div class="css-content">
-                <img  class="css-img" src="/assets/css.png" alt="">
+                <img  class="css-img" src="assets/css.png" alt="">
                 <h1 class="title-styles">CSS</h1>
                 <p class="section-descript section-description">CSS enhances HTML, creating stylish and responsive web designs.</p>
                 <a class="target-container-link" href="">Learn more</a>
            </div>
            <div class="javascript-content">
-            <img class="java-img"  src="/assets/js.png" alt="">
+            <img class="java-img"  src="assets/js.png" alt="">
             <h1 class="title-styles">JAVASCRIPT</h1>
             <p class="section-descript section-description">JavaScript skills enable dynamic and interactive web application development.</p>
             <a class="target-container-link" href="">Learn more</a>
@@ -116,19 +116,19 @@
 
     <div id="skill-box">
            <div class=" skill-container">
-        <div><img class="img-size" src="/assets/react.png" alt=""></div>
+        <div><img class="img-size" src="assets/react.png" alt=""></div>
         <div><h1 class="skill-title">ReactJS</h1>
         <p class="section-description" >React JS empowers developers to build interactive, component-based UIs, leveraging virtual DOM for efficient rendering in modern web applications.</p>
         <a  class="target-container-link" href="">Learn More</a></div>
     </div>
     <div class="skill-container">
-        <div><img class="img-size" src="/assets/nodejs.png" alt=""></div>
+        <div><img class="img-size" src="assets/nodejs.png" alt=""></div>
         <div><h1 class=" skill-title">NodeJs</h1>
         <p class="section-description">Node.js enables server-side JavaScript execution, facilitating scalable and efficient backend development with its event-driven architecture and rich ecosystem of libraries.</p>
         <a  class="target-container-link" href="">Learn More</a></div>
     </div>
     <div class="skill-container">
-        <div><img class="img-size" src="/assets/mongodb.png" alt=""></div>
+        <div><img class="img-size" src="assets/mongodb.png" alt=""></div>
         <div><h1 class=" skill-title">MongoDB</h1>
             <p class="section-description">MongoDB is a flexible NoSQL database, ideal for storing unstructured data and supporting scalable, high-performance applications with its document-oriented architecture.</p>
             <a  class="target-container-link" href="">Learn More</a></div>
@@ -153,12 +153,12 @@
 </div>
     </footer>
     <div class="open-commitment" >
-       <div> <h1 class="open-commitment-title">An Open Commitment by Awlad Hossain</h1>
+       <div> <h1 class="open-commitment-title">An open commitment by Awlad Hossain</h1>
     </div>
         <div class="img-tag">  
-          <a href="https://www.facebook.com/"><img src="/assets/facebook.png" alt=""> </a>
-           <a href="https://github.com/Jihanchy"> <img src="/assets/github.png" alt=""></a>
-            <a href="https://www.linkedin.com/"><img src="/assets/linkedin-icon 1.png" alt=""></a>
+          <a href="https://www.facebook.com/"><img src="assets/facebook.png" alt=""> </a>
+           <a href="https://github.com/Jihanchy"> <img src="assets/github.png" alt=""></a>
+            <a href="https://www.linkedin.com/"><img src="assets/linkedin-icon 1.png" alt=""></a>
         </div>
     </div>
 </body>
