added footer section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <iframe class="inspiration-video-custom" width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=5v0hccMsHqA6iBU5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
             </div>
-        </section>
+        </gsection>
         <section class="my-current-target-container">
             <div class="my-current-target-content">
                 <h1 class="section-title">My Current Target</h1>
